maze.lessons.maze.island.IslandMaze.scala.error
Escaper:41: error: value NORTHn is not a member of object plm.universe.Direction
  case 1 => while (getDirection != Direction.NORTHn && !(estSurBiscuit())) {keepHandOnSideWall()}; etat = 0;
                                             ^