maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
def keepHandOnSideWall() = {
	gauche();
	while (estFaceMur()) {
	droite();
	}
	avance();
}

def avoirMurGauche(): Boolean = {
	gauche();
	if (estFaceMur()) {
		droite();
		return true;
	}
	droite();
	return false;
}

def chercheMur() = {
	if (estFaceMur()) {
		droite();
	} else {
		avance();
	}
}

def deplacelelong() = {
	while (!avoirMurGauche()) {
		chercheMur();
	}
	keepHandOnSideWall();
}
	

var etat=0;
while (!(estSurBiscuit())) {
etat match  {
  case 0 => setDirection(Direction.NORTH); while (!(estFaceMur())) {avance()}; etat = 1; gauche();
  case 1 => while (getDirection != Direction.NORTHn && !(estSurBiscuit())) {keepHandOnSideWall()}; etat = 0;
  case _ => println("Ce cas ne devrait pas arriver. Corrigez ce problème svp.")
}
 }
    prendBiscuit();
}
